Fixed pre spacing

--- a/css/articlecls.css
+++ b/css/articlecls.css
@@ -195,7 +195,7 @@ pre {
 	line-height: 19px;
 	overflow: auto;
 	padding: 6px;
-	margin: 1em 0;
+	margin: 1ex 0;
 	text-align: left; 
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
